appId: com.cengdong.rnshop
---
- runScript: ../lib/getRandomCategory.js
- clearState
- launchApp
- runFlow: ../signin/signin-success-flow.yaml
- assertVisible: Categories
- tapOn: ${output.category.randomCategory.name}
- assertVisible:
    id: 'categoryName'
- evalScript: ${output.counter = 0}
- repeat:
    while:
      true: ${output.counter < output.category.randomCategory.products.length}
    commands:
      - assertVisible: ${output.category.randomCategory.products[output.counter]}
      - evalScript: ${output.counter = output.counter + 1}
